# librtmp_mac

./: CMakeLists.txt  README.md  aaa.h264  main.cpp
librtmp/: CMakeLists.txt  xiecc_rtmp.c
librtmp/librtmptest.build/Debug/rtmp.build/: dgph  dgph~
librtmp/librtmptest.build/Debug/rtmp.build/Objects-normal/x86_64/: amf.d  amf.dia  hashswf.d  log.d  parseurl.d  rtmp.LinkFileList  rtmp.d
